# thrifty

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  smol_thrift.opam  smol_thrift_compiler.opam  thrifty-lwt.opam  thrifty.opam  thrifty_compiler.opam  todo.md
.github/workflows/: main.yml
src/: BinaryProtocol.mli  CompactProtocol.ml  ServiceMultiplex.ml  TBuffer.ml  TBuffer.mli  TChannel.ml  TChannel.mli  TFile.ml  TFile.mli  TString.ml  TString.mli  basic_transports.ml  basic_transports.mli  binary_protocol.ml  binary_protocol.mli  common_.ml  compact_protocol.ml  compact_protocol.mli  debug.ml  debug_protocol.ml  debug_protocols.ml  direct_call.ml  dune  service_multiplex.ml  smol_thrift.ml  thrifty.ml  transfer.ml  transfer.mli  types.ml
src/compiler/: ast.ml  codegen.ml  codegen.mli  dune  find_scc.ml  find_scc.mli  iter.ml  parser.ml  parser.mli  smol_thrift_compiler.ml  smol_thrift_compiler_lib.ml  thrifty_compiler.ml  thrifty_compiler_lib.ml
src/lwt/: dune  thrifty_lwt.ml
src/unix/: dune  thrifty_unix.ml
test/: .ocamlformat-ignore  calculator.ml  calculator.thrift  calculator_cg.ml  dune  foo.thrift  foo_cg.ml  t1.expected  t1.ml  t_binary_prot.expected  t_binary_prot.ml  t_calculator.ml  t_compact_prot.expected  t_compact_prot.ml
test/compiler/: dune  t_parse1.expected  t_parse1.ml
test/lwt/: calculator.thrift  calculator_client.ml  calculator_server.ml  dune
test/parse_tests/: ThriftTest.expected  cassandra.expected  dune  shared.expected  tutorial.expected
test/parse_tests/evernote/: dune
