(tests
 (libraries smol_thrift containers)
 (flags :standard -open Smol_thrift -open Smol_thrift.Types)
 (names t1 t_binary_prot t_compact_prot foo_cg))

(rule
 (targets foo_cg.ml)
 (mode promote)
 (deps
  (:file foo.thrift))
 (action
  (run ../src/compiler/smol_thrift_compiler.exe --pp %{file} -o %{targets})))
