(executable
 (name smol_thrift_compiler)
 (package smol_thrift_compiler)
 (modules smol_thrift_compiler)
 (libraries smol_thrift)
 (public_name smol_thrift_compiler))

(library
 (name smol_thrift_compiler_lib)
 (modules :standard \ smol_thrift_compiler)
 (libraries containers smol_thrift)
 (flags :standard -open Smol_thrift.Types)
 (public_name smol_thrift_compiler.lib))
