(executable
 (name thrifty_compiler)
 (package thrifty_compiler)
 (modules thrifty_compiler)
 (libraries thrifty thrifty_compiler.lib)
 (public_name thrifty_compiler))

(library
 (name thrifty_compiler_lib)
 (modules :standard \ thrifty_compiler)
 (libraries containers thrifty)
 (flags :standard -open Thrifty.Types)
 (public_name thrifty_compiler.lib))
