(env
 (_
  (flags :standard -open Thrifty.Types)))

(executable
 (name calculator_server)
 (modules calculator_server)
 (libraries thrifty thrifty-lwt lwt.unix calculator))

(executable
 (name calculator_client)
 (modules calculator_client)
 (libraries thrifty thrifty-lwt lwt.unix calculator))

(library
 (name calculator)
 (modules calculator)
 (libraries thrifty))

(rule
 (targets calculator.ml)
 (deps
  (:file calculator.thrift))
 (action
  (run ../../src/compiler/thrifty_compiler.exe --pp %{file} -o %{targets})))
