(rule
 (alias runtest)
 (deps (:file ThriftTest.thrift))
 (package smol_thrift_compiler)
 (action
  (run ./bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps (:file fb303.thrift))
 (package smol_thrift_compiler)
 (action
  (run ./bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps (:file shared.thrift))
 (package smol_thrift_compiler)
 (action
  (run ./bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps (:file tutorial.thrift))
 (package smol_thrift_compiler)
 (action
  (run ./bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps (:file cassandra.thrift))
 (package smol_thrift_compiler)
 (action
  (run ./bin/parse_print.exe %{file})))
