
(rule
 (targets ThriftTest.out)
 (deps
  (:file ThriftTest.thrift))
 (package thrifty_compiler)
 (action
  (with-stdout-to %{targets} (run ./bin/parse_print.exe %{file}))))

(rule
 (alias runtest)
 (action (diff? ThriftTest.expected ThriftTest.out)))

(rule
  (targets fb303.out)
 (deps
  (:file fb303.thrift))
 (action
     (with-stdout-to %{targets} (run ./bin/parse_print.exe %{file}))))

(rule
 (alias runtest)
 (package thrifty_compiler)
 (action (diff? fb303.expected fb303.out)))

(rule
 (targets shared.out)
 (deps
  (:file shared.thrift))
 (action
  (with-stdout-to %{targets} (run ./bin/parse_print.exe %{file}))))

(rule
 (alias runtest)
 (package thrifty_compiler)
 (action (diff shared.expected shared.out)))


(rule
 (targets tutorial.out)
 (deps
  (:file tutorial.thrift))
 (action
  (with-stdout-to %{targets} (run ./bin/parse_print.exe %{file}))))

(rule
 (alias runtest)
 (package thrifty_compiler)
 (action (diff tutorial.expected tutorial.out)))

(rule
 (targets cassandra.out)
 (deps
  (:file cassandra.thrift))
 (action
  (with-stdout-to %{targets} (run ./bin/parse_print.exe %{file}))))

(rule
 (alias runtest)
 (package thrifty_compiler)
 (action (diff cassandra.expected cassandra.out)))
