(rule
 (alias runtest)
 (package smol_thrift_compiler)
 (action
  (run ./../bin/parse_print.exe ./Errors.thrift)))

(rule
 (alias runtest)
 (package smol_thrift_compiler)
 (action
  (run ./../bin/parse_print.exe ./Limits.thrift)))

(rule
 (alias runtest)
 (package smol_thrift_compiler)
 (action
  (run ./../bin/parse_print.exe NoteStore.thrift)))

(rule
 (alias runtest)
 (package smol_thrift_compiler)
 (action
  (run ./../bin/parse_print.exe Types.thrift)))

(rule
 (alias runtest)
 (package smol_thrift_compiler)
 (action
  (run ./../bin/parse_print.exe UserStore.thrift)))
