(rule
 (alias runtest)
 (deps
  (:file Errors.thrift))
 (package thrifty_compiler)
 (action
  (run ./../bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps
  (:file Limits.thrift))
 (package thrifty_compiler)
 (action
  (run ./../bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps
  (:file NoteStore.thrift))
 (package thrifty_compiler)
 (action
  (run ./../bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps
  (:file Types.thrift))
 (package thrifty_compiler)
 (action
  (run ./../bin/parse_print.exe %{file})))

(rule
 (alias runtest)
 (deps
  (:file UserStore.thrift))
 (package thrifty_compiler)
 (action
  (run ./../bin/parse_print.exe %{file})))
